#1450 Minor cleanup